--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,10 @@
     "hpp": "^0.2.3",
     "jest": "^24.9.0",
     "morgan": "^1.9.1",
+    "pg": "^7.17.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.3",
+    "sequelize-cli": "^5.5.1",
     "ts-jest": "^24.3.0",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
