--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -10,9 +10,9 @@
       "emitDecoratorMetadata": true,
       "allowSyntheticDefaultImports": true,
       "moduleResolution": "node",
+      "esModuleInterop": true,
       "typeRoots": ["./node_modules/@types"]
     },
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules"]
   }
-  
