--- a/api/package.json
+++ b/api/package.json
@@ -5,21 +5,28 @@
     "start": "cross-env NODE_ENV=production ts-node --transpile-only src/server.ts",
     "dev": "cross-env NODE_ENV=development nodemon --watch src --delay 1 --exec 'ts-node' src/server.ts",
     "test": "jest --forceExit --detectOpenHandles",
+    "db:migrate": "cd ./src/db && npx sequelize-cli db:migrate",
+    "db:seed": "cd ./src/db && npx sequelize-cli db:seed",
     "lint": "tslint -p tsconfig.json -c tslint.json"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.3.9",
+    "@types/pg": "^7.14.3",
     "@types/qs-middleware": "^1.0.1",
     "apollo-server-express": "^2.9.16",
+    "bcrypt": "^4.0.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "cors": "^2.8.5",
-    "envalid": "^6.0.0",
+    "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
-    "hpp": "^0.2.3",
     "jest": "^24.9.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
-    "pg": "^7.17.1",
+    "pg": "^8.0.0",
     "pg-hstore": "^2.3.3",
     "qs-middleware": "^1.0.3",
     "sequelize": "^5.21.3",
@@ -35,7 +42,7 @@
     "@types/hpp": "^0.2.1",
     "@types/jest": "^24.0.25",
     "@types/morgan": "^1.7.37",
-    "@types/node": "^13.1.4",
+    "@types/node": "^13.13.2",
     "@types/supertest": "^2.0.8",
     "supertest": "^4.0.2",
     "tslint": "^5.20.1",
