--- a/native/package.json
+++ b/native/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
+    "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.1.7",
     "@react-navigation/stack": "^5.2.14",
     "@types/react-navigation": "^3.4.0",
+    "@types/yup": "^0.28.0",
     "apollo-boost": "^0.4.7",
     "expo": "~37.0.3",
     "expo-cli": "^3.19.2",
@@ -28,7 +30,8 @@
     "react-native-screens": "^2.7.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-web": "~0.11.7",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
