--- a/native/package.json
+++ b/native/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.1.7",
     "@react-navigation/stack": "^5.2.14",
+    "@types/jsonwebtoken": "^8.3.9",
     "@types/react-navigation": "^3.4.0",
     "@types/yup": "^0.28.0",
     "apollo-boost": "^0.4.7",
@@ -21,6 +22,8 @@
     "expo-updates": "~0.1.0",
     "formik": "^2.1.4",
     "graphql": "^15.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt": "^0.2.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
