--- a/native/package.json
+++ b/native/package.json
@@ -10,15 +10,23 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
     "@react-native-community/async-storage": "^1.9.0",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.1.7",
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/material-top-tabs": "^5.2.5",
+    "@react-navigation/native": "^5.4.0",
     "@react-navigation/stack": "^5.2.14",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/react-navigation": "^3.4.0",
     "@types/yup": "^0.28.0",
     "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-utilities": "^1.3.4",
     "expo": "~37.0.3",
-    "expo-cli": "^3.19.2",
+    "expo-cli": "^3.20.9",
     "expo-updates": "~0.1.0",
     "formik": "^2.1.4",
     "graphql": "^15.0.0",
@@ -28,12 +36,14 @@
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-reanimated": "^1.8.0",
+    "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.7.0",
+    "react-native-screens": "~2.2.0",
+    "react-native-tab-view": "^2.14.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.1.0",
+    "subscriptions-transport-ws": "^0.9.16",
     "yup": "^0.28.5"
   },
   "devDependencies": {
